Small markdown update

--- a/data_collection/data_analysis.ipynb
+++ b/data_collection/data_analysis.ipynb
@@ -6,9 +6,9 @@
    "metadata": {},
    "source": [
     "# Player Injury Data Analysis - Section 4\n",
-    "Take injury and in-game feature sets of players to predict probability of injury in an upcoming game\n",
+    "Take injury and in-game feature sets of players to predict probability of injury in an upcoming game.\n",
     "\n",
-    "This notebook assesses and visualises the impact of features on injury probability"
+    "This notebook assesses and visualises the impact of features on injury probability."
    ]
   },
   {
