Updates with data

--- a/data_collection/DataCollection.ipynb
+++ b/data_collection/DataCollection.ipynb
@@ -163,9 +163,9 @@
     "games = pd.read_csv('data/overview_data/games_data.csv')\n",
     "all_injuries = []\n",
     "for g in games['game_id']:\n",
-    "    game_injury_df = uf.get_injury_df_for_game_FFScout(g, games, injury_df_ffscout)\n",
+    "    game_injury_df = uf.get_injury_df_for_game(g, games, injury_df_ffscout)\n",
     "    all_injuries.extend(list(game_injury_df['injured'].values))\n",
-    "    #game_injury_df.to_csv('game_data/'+str(g)+'/'+str(g)+'_injured_ffscout.csv',index=False)"
+    "    #game_injury_df.to_csv('game_data/'+str(g)+'/'+str(g)+'_injured.csv',index=False)"
    ]
   },
   {
