--- a/data_collection/DataCollection.ipynb
+++ b/data_collection/DataCollection.ipynb
@@ -570,7 +570,8 @@
    "id": "044c7da8-33e1-408a-8f3b-b50686277ca7",
    "metadata": {},
    "source": [
-    "## Weather Data"
+    "## Weather Data\n",
+    "We dont include the weather data in this repository. The weather data we use for the injury model is in the injury feature set we have in this repository"
    ]
   },
   {
