--- a/team_selection_MDP/MDP.ipynb
+++ b/team_selection_MDP/MDP.ipynb
@@ -561,6 +561,8 @@
     "        curr_state=new_state\n",
     "        #print(\"------------------------------------\")\n",
     "        #print(mdp.is_terminal(curr_state))\n",
+    "    greedy_df = pd.concat([pd.DataFrame(total_injuries),pd.DataFrame(inj_probs)],axis=1)\n",
+    "    greedy_df.to_csv('data/greedy_dfs/'+str(team_id)+'/'+str(team_id)+'_'+str(total_reward)+'.csv',index=False)\n",
     "    injuries_matrix = (pd.DataFrame(total_injuries).diff().fillna(0) > 0).sum().sum()\n",
     "    injuries_starting_matrix = (pd.DataFrame(total_injuries_starting).diff().fillna(0) > 0).sum().sum()\n",
     "    all_injuries.append(injuries_matrix)\n",
