--- a/data_collection/DataCollection.ipynb
+++ b/data_collection/DataCollection.ipynb
@@ -139,10 +139,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "injury_df_formatted = pd.read_csv('data/injury_data/all_player_injuries_updated.csv')\n",
+    "injury_df_formatted = pd.read_csv('data/injury_data/all_player_injuries.csv')\n",
     "injury_df_formatted = injury_df_formatted.reset_index(drop=True)\n",
     "\n",
-    "injury_df_ffscout = pd.read_csv('data/injury_data/ffscout_injuries_updated.csv')"
+    "##injury_df_ffscout = pd.read_csv('data/injury_data/ffscout_injuries_updated.csv') If using injury data from FFScout"
    ]
   },
   {
@@ -150,7 +150,7 @@
    "id": "006f89fb-0073-4ce9-b6a1-c646943c97ef",
    "metadata": {},
    "source": [
-    "Update this function to be either game data from transfermrket or from ffscout using different functions and dataframes input. Some comments on tweaking is in util_functions"
+    "Update this function to be either game data from transfermrket or from ffscout using different functions and dataframes input. Some comments on tweaking is in util_functions. This code stores the injury data segmented into each game"
    ]
   },
   {
@@ -320,17 +320,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f121853-545e-4a0f-9cd6-60c0c72092f5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "injury_df = pd.read_csv('data/injury_data/all_player_injuries_updated.csv')\n",
-    "injury_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "85169834-6d5f-4876-93ef-6840e8ba5811",
    "metadata": {},
    "outputs": [],
@@ -472,6 +461,14 @@
     "    p_df['injuries_past_six_months'] = injuries_past_six_months_l\n",
     "    p_df['injuries_past_twelve_months'] = injuries_past_twelve_months_l\n",
     "    #p_df.to_csv('data/player_data/'+str(pid)+'/'+str(pid)+'_injuryfeatures.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1049271f-6880-4719-a6a5-e39aacdcca3a",
+   "metadata": {},
+   "source": [
+    "## Get team injury features"
    ]
   },
   {
@@ -643,7 +640,7 @@
     "    n_injuries_against = 0\n",
     "    n_games = len(games_participated)\n",
     "    for game_id in games_participated['game_id']:\n",
-    "        injured_df = pd.read_csv('data/game_data/'+str(game_id)+\"/\"+str(game_id)+\"_injured_ffscout.csv\")\n",
+    "        injured_df = pd.read_csv('data/game_data/'+str(game_id)+\"/\"+str(game_id)+\"_injured.csv\")\n",
     "        n_injuries += injured_df[injured_df['team_id'] == team]['injured'].sum()\n",
     "        n_injuries_against += injured_df[injured_df['team_id'] != team]['injured'].sum()\n",
     "    team_injuries_per_game.append(n_injuries/n_games)\n",
