--- a/data_collection/data_analysis.ipynb
+++ b/data_collection/data_analysis.ipynb
@@ -42,6 +42,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "02055ab4-24a6-47a9-b394-0c09361bbe05",
+   "metadata": {},
+   "source": [
+    "##### We store the final feature dataframe in the repository for use, so these steps can be skipped"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "16477ce4-d06a-4d73-89fd-d319a2dd62c6",
