--- a/team_selection_MDP/MDP.ipynb
+++ b/team_selection_MDP/MDP.ipynb
@@ -68,7 +68,7 @@
    "outputs": [],
    "source": [
     "game_dates = load_data.load_player_data('Eden Hazard')[0]['game_date'][-38:].reset_index(drop=True) # Gets consistent game schedule\n",
-    "team_id = 23\n",
+    "team_id = 23 #Selects team to run MDP for\n",
     "team_squad = pd.read_csv('data/18-19_Squad/'+str(team_id)+'.csv')\n",
     "team_rewards = pd.read_csv('data/Team_rewards/'+str(team_id)+'.csv')\n",
     "team_reward_without_reserves = team_rewards[[col for col in team_rewards.columns if '20' not in col]].copy()\n",
@@ -139,7 +139,8 @@
    "outputs": [],
    "source": [
     "#for i in range(1,20):\n",
-    "#    player_dfs[i].to_csv('team_selection_MDP/Feature_DF/'+str(team_id)+'/'+str(i)+'.csv',index=False)"
+    "#    player_dfs[i].to_csv('data/Feature_DF/'+str(team_id)+'/'+str(i)+'.csv',index=False)\n",
+    "#Creates Feature Dataframes for players."
    ]
   },
   {
@@ -895,7 +896,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame(player_greedy_list).to_csv('MCTS_RL_Data_2/'+str(team_id)+'.csv',index=False)"
+    "pd.DataFrame(player_greedy_list).to_csv('MCTS_RL_Data/'+str(team_id)+'.csv',index=False)"
    ]
   }
  ],
